Release 2.5.0
Promoted:

- Tons of new JVM optimizations!

New Features/General Changes:

- Change example java_command to reference Java 11 instead of Java 15.
We can't update that every 3 months, reference LTSs instead.

- Make enable_preview a top level option.

- Modified default GC settings to tune them.

- Correctly set user.language, user.country and user.variant to be locale
in-dependent. Old values used en-US and no user.variant. This caused it
to use Locale#US instead of Locale#ROOT or even Locale#ENGLISH.

- Made Class Data Sharing (CDS) use max_ram as upper limit.

- Made class_caching true by default!

- Enabled DisableExplicitGC by default, again.

Bug Fixes:

- [Critical] Fix memory leak between restarts. Also fixes variables
not resetting and/or JVM arguments duplicating over restarts.

- [Medium] Fix "The system cannot find the path specified" error,
create the cache folder more early.

- [Low] Remove java.vm.compressedOopsMode property.

- Set omit_stacktrace to true if it is false and always_omit_stack_trace
is set to true.

- Fix always_omit_stacktrace not working.

Signed-off-by: Mustafa ÖNCEL <support@lifemcserver.com>